--- a/recipes/style.css
+++ b/recipes/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     text-decoration: none;
+    list-style-type: none;
     padding: 0;
     margin: 0;
 }
@@ -20,20 +21,31 @@
     right: 0;
 }
 
+a{
+    color: var(--bg-color);
+}
+
+img{
+    object-fit: cover;
+}
+
+/* ------------------------- Theme Section ------------------- */
 .theme-container .btn{
     font-size: 1.2rem;
     font-weight: bold;
     background-color: transparent;
     text-transform: uppercase;
-    border: 1px solid var(--color);
-    border-radius: 5px;
+    border: 1px solid tomato;
+    /* border: none; */
+    border-radius: 10px;
     cursor: pointer;
     color: var(--color);
     padding: 10px 15px;
 }
 
 .theme-container .btn:hover{
-    background: var(--color);
+    /* background: var(--color); */
+    background: tomato;
     color: var(--bg-color);
 }
 
@@ -55,25 +67,10 @@ body{
     flex-direction: column;
 }
 
-.recipes-list{
-    margin: 4rem 0;
-}
-
-.recipes-list li{
-    margin: 2.5rem 0;
-}
-
-.recipes-list .title{
-    font-size: 1.2rem;
-}
-
-.recipes-list .recipe-name{
-    margin-bottom: 1rem;
-}
 
 .container{
-    width: 80%;
-        
+    width: 70%;
+       
     margin: auto;
     margin-top: 5rem;
 }
@@ -81,14 +78,48 @@ body{
 .title{
     text-transform: uppercase;
     color: tomato;
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
 }
+
+
+/* ------------------------- Recipe Section ------------------- */
+.home{
+    text-align: center;
+    padding: 5rem;
+}
+
+.recipes-list{
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 4rem 0;
+}
+
+.recipes-list li{
+    margin: 2.5rem;
+}
+
+.recipes-list .title{
+    font-size: 1.2rem;
+}
+
+.recipes-list .recipe-name{
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.recipes-list li div a img{
+    height: 400px;
+    border-radius: 10px;
+    box-shadow: 0px 3px 10px var(--color);
+}
+
+
 
 .container .chef-name{
     color: steelblue;
 }
 
-.container p{
+.container .lead{
     margin: 1rem 3rem;
 }
 
@@ -103,24 +134,16 @@ body{
 
 .img-container .sample{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 1rem;
 
     margin: 10px;
-}
-
-img{
-    object-fit: cover;
 }
 
 .img-container .sample img{
     width: 100%;
     height: 100%;
     border-radius: 10px;
-}
-
-.main-img img{
-    height: 650px;
 }
 
 .imgs-list .imgs{
@@ -131,7 +154,7 @@ img{
     margin: 10px 0;
 }
 
-.img-container .details{
+.details{
     width: 100%;
 
     display: flex;
@@ -144,6 +167,8 @@ img{
     color: steelblue;
 }
 
+
+/* ------------------- Details ---------------------- */
 .details{
     list-style-type: none;
 }
@@ -153,28 +178,139 @@ img{
 }
 
 
-/* Start need tem Section  */
+/* ---------------------------- Need Item Section -----------------------   */
 .need-container{
-    width: inherit;
-    
+    width: 80%;  
+    margin: 5rem 0;  
+}
+
+.need-container .title{
+    margin: 0;
+}
+
+.need-container .lead{
+    font-weight: bold;
+    line-height: 30px;
+    margin: 1rem 0;
+}
+
+.need-container li{
+    color: #777;
+    margin: 1rem 0;
 }
 
 
-.items-list{
-    list-style-type: square;
-    
+/* ----------------------------  Description Section ------------------------ */
+.description .lead{
+    margin: 1rem 0;
+}
+
+.description pre{
+    font-size: 1rem;
+    text-transform: capitalize;
+    color: #777;
+}
+
+.step-container .steps{
+    width: calc(100% / 2);
+    margin: 3rem 0;
+}
+
+.steps p{
+    margin: 1rem 0;
+}
+
+.steps img{
+    width: 100%;
+}
+
+
+.facts{
+    margin: 4rem 0;
+}
+
+.facts .title{
+    font-weight: bold;
+    font-size: 2rem;
+    margin: 3rem 0 0 0;
+}
+
+.facts .details{
+    width: calc(100% / 3);
+    justify-content: space-between;
+    margin: 1rem 0;
+}
+
+
+/*---------------------------- Footer Section -------------------- */
+.footer-section{
+    border-top: 1px solid tomato;
+    line-height: 2rem;
+    padding-top: 3rem;
+    text-transform: uppercase;
+}
+
+.footer-section, .infos-part, .col2-part{
+    justify-content: space-between;
+    align-items: baseline;
+    flex-direction: row;
+}
+
+.footer-section .ads-part a:first-child{
+    background: rgba(255, 99, 71, 0.856);
+    border: 0;
+    border-radius: 10px;
+    padding: 15px 40px;
+    margin: 1rem 0;
+
+    display: inline-block;
+}
+
+.footer-section .ads-part a:first-child:hover{
+    background: tomato;
 }
 
 
 
+.infos-part{
+    width: 50%;
+    font-size: 0.9rem;
+}
+
+.infos-part li{
+    cursor: pointer;
+    color: #777;
+}
+
+.infos-part li:hover{
+    font-weight: bold;
+    color: var(--color);
+}
+
+.col2-part{
+    width: 60%;
+}
+
+.footer{
+    width: 100%;
+    background: var(--color);
+}
+
+.footer .container,
+.home-footer .flex-center{
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+    color: var(--bg-color);
+}
+
+.home-footer .flex-center{
+    width: 70%;
+    margin: auto;
+}
 
 
-
-
-
-
-
-
+/* -------------------------- Media Screen ----------------------  */
 
 @media (max-width: 900px) {
 
@@ -208,6 +344,16 @@ img{
     .imgs-list .imgs{
         margin-right: 20px;
     }
+
+    .need-container, .description, .step-container, .facts, .footer-section{
+        width: 90%;
+        text-align: left;
+        margin: auto;
+    }
+
+    .infos-part{
+        font-size: 0.8rem;
+    }
 }
 
 
@@ -226,5 +372,16 @@ img{
 
     .details{
         flex-wrap: wrap;
+    }
+
+    .footer-section{
+        width: 100%;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .infos-part{
+        width: 100%;
+        justify-content: space-evenly;
     }
 }
