1-12-2024 updated all files

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -16,7 +16,7 @@
     justify-content: center;
     align-items: center;
 
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
 }
@@ -37,16 +37,22 @@ img{
     text-transform: uppercase;
     border: 1px solid tomato;
     /* border: none; */
-    border-radius: 10px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
     cursor: pointer;
     color: var(--color);
-    padding: 10px 15px;
+    padding: 5px 15px;
+
+    transform: translateX(calc(100% / 1.2));
+    transition: 0.3s ease-in;
 }
 
 .theme-container .btn:hover{
     /* background: var(--color); */
     background: tomato;
     color: var(--bg-color);
+
+    transform: translateX(0);
 }
 
 .dark-mode{
@@ -315,6 +321,17 @@ body{
 
 /* -------------------------- Media Screen ----------------------  */
 
+@media (min-width: 900px) {
+    .infos-part{
+        width: 65%;
+        font-size: 0.8rem;
+    }
+
+    .col2-part{
+        width: 70%;
+    }
+}
+
 @media (max-width: 900px) {
 
     .container{
@@ -371,13 +388,13 @@ body{
     .col2-part{
         width: 65%;
     }
-
+    
     .facts .details{
         width: calc(100% / 2);
     }
-
+    
     .footer h4, .footer span{
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 }
 
@@ -389,24 +406,94 @@ body{
     .details span{
         font-size: 0.8rem;
     }
-
+    
     .imgs-list .imgs{
         width: 80px;
         height: 80px;
     }
-
+    
     .details{
         flex-wrap: wrap;
     }
-
+    
     .footer-section{
         width: 100%;
         align-items: center;
         flex-direction: column;
     }
-
+    
     .infos-part{
         width: 100%;
         justify-content: space-evenly;
     }
+    
+    .footer h4, .footer span{
+        font-size: 0.8rem;
+    }
+}
+
+
+
+
+
+
+/* ----------- model box --------------- */
+.modal-box{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.3),
+        rgba(0, 0, 0, 0.5)        
+    );
+
+    position: fixed;
+    top: 0;
+    left: 0;    
+
+    display: none;
+}
+
+.modal-box .box{
+    /* width: 60%; */
+    height: 80vh;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px var(--color);
+    margin: auto;
+}
+
+.modal-box .header{
+    width: 100%;
+    background-color: var(--color);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    color: var(--bg-color);
+    padding: 10px;
+
+    justify-content: space-between;
+    flex-direction: row;
+
+}
+
+.modal-box .header span{
+    font-weight: bold;
+    font-size: 1.5rem;
+    color: rgba(206, 18, 18, 0.896);
+    cursor: pointer;
+}
+
+.modal-box .header span:hover{
+    color: rgb(252, 56, 56);
+}
+
+.modal-box .body{
+    width: 100%;
+    height: 100%;
+}
+
+.modal-box .body img{
+    width: 100%;
+    height: 100%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    object-fit: cover;
 }
