--- a/recipes/style.css
+++ b/recipes/style.css
@@ -334,6 +334,11 @@ body{
     margin: auto;
 }
 
+.home-footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
 
 /* -------------------------- Media Screen ----------------------  */
 
