--- a/recipes/style.css
+++ b/recipes/style.css
@@ -499,6 +499,11 @@ body{
 
 }
 
+.header h3{
+    text-transform: capitalize;
+    letter-spacing: 2px;
+}
+
 .modal-box .header span{
     font-weight: bold;
     font-size: 1.5rem;
